--- a/.github/workflows/mavenworkflow.yml
+++ b/.github/workflows/mavenworkflow.yml
@@ -6,13 +6,13 @@ on:
 jobs:
   Do-the-travis-thing:
     runs-on: ubuntu-20.04 #or ubuntu-latest
-     services:
-       mysql:
-         image: mysql:8.0
-         env:
-           DB_DATABASE: ca1backend
-           DB_USER: Jedi
-           DB_PASSWORD: ${{ secrets.DB_PASS }}
+#     services:
+#       mysql:
+#         image: mysql:8.0
+#         env:
+#           DB_DATABASE: ca1backend
+#           DB_USER: Jedi
+#           DB_PASSWORD: ${{ secrets.DB_PASS }}
     steps:
       - name: checkout
         uses: actions/checkout@v2
